# memospot

./: .dockerignore  .dprint.jsonc  .earthlyignore  .editorconfig  .gitignore  .rustfmt.toml  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Earthfile  LICENSE  LICENSE.md  README.md  SECURITY.md  Taskfile.yml  biome.jsonc  bun.lockb  bunfig.toml  crowdin.yml  deno.jsonc  deps.ts  docker-bake.hcl  justfile  memos-server-updater.ps1  memos-server-updater.sh  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  tsconfig.node.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit-codeql.yml  audit-dependencies.yml  audit-rust.yml  audit-scorecards.yml  audit.yml  backend-tests.yml  build-release.yml  build-test.yml  cargo-tests.yml  check-formatting.yml  check-rust.yml  check-typescript.yml  codeql.yml  deno-tests.yml  frontend-tests.yml  issue-translator.yml  lint-config.yml  publish-release.yml  rust-audit.yml  rust.yml  scorecards.yml  test-build.yml  typescript.yml  writerside.yml
.zed/: settings.json
assets/: README.md
build-scripts/: README.md  bun.lockb  common.test.ts  common.ts  deps.ts  downloadMemos.test.ts  downloadMemos.ts  downloadMemosBuildsHook.d.ts  downloadMemosBuildsHook.test.ts  downloadMemosBuildsHook.ts  package.json  upxPack.test.ts  upxPack.ts  upxPackHook.d.ts  upxPackHook.test.ts  upxPackHook.ts
build-scripts/lib/: github.ts  taskStamps.ts  terminal.ts  util.ts
build-scripts/tests/: downloadMemos.test.ts  github.test.ts  is-stale.test.ts  upxPack.test.ts  util.test.ts
build-scripts/types/: download_memos.ts
crates/: README.md
crates/build_utils/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: config.rs  default.rs  lib.rs  log.rs  memos.rs  memospot.rs  migration.rs  tests.rs
crates/dialog/: Cargo.toml
crates/dialog/src/: dialog.rs  expect.rs  lib.rs  limit_width.rs  macros.rs
crates/entity/: Cargo.toml  README.md
crates/entity/src/: activity.rs  idp.rs  inbox.rs  lib.rs  memo.rs  memo_organizer.rs  memo_relation.rs  migration_history.rs  prelude.rs  resource.rs  storage.rs  system_setting.rs  tag.rs  user.rs  user_setting.rs  webhook.rs
crates/homedir/: Cargo.toml  LICENSE  README.md
crates/homedir/src/: lib.rs  tests.rs
crates/memospot/: Cargo.toml  Tauri.toml  build.rs
crates/memospot/capabilities/: default.toml
crates/memospot/i18n/: README.md
crates/memospot/i18n/ar-SA/: memospot.ftl
crates/memospot/i18n/de-DE/: memospot.ftl
crates/memospot/i18n/en/: memospot.ftl
crates/memospot/i18n/es/: memospot.ftl
crates/memospot/i18n/es-ES/: memospot.ftl
crates/memospot/i18n/fr-FR/: memospot.ftl
crates/memospot/i18n/hi-IN/: memospot.ftl
crates/memospot/i18n/ja-JP/: memospot.ftl
crates/memospot/i18n/pt-BR/: memospot.ftl
crates/memospot/i18n/pt-PT/: memospot.ftl
crates/memospot/i18n/ru-RU/: memospot.ftl
crates/memospot/i18n/uk-UA/: memospot.ftl
crates/memospot/i18n/zh-CN/: memospot.ftl
crates/memospot/i18n/zh-Hans/: memospot.ftl
crates/memospot/i18n/zh-Hant/: memospot.ftl
crates/memospot/i18n/zh-TW/: memospot.ftl
crates/memospot/icons/: gen-icons.task  icon.icns
crates/memospot/src/: cmd.rs  event.rs  events.rs  i18n.rs  init.rs  lib.rs  log.default.yaml  main.rs  memos.rs  memos_log.rs  memos_version.rs  menu.rs  process.rs  route.rs  routes.rs  runtime_config.rs  shortcut_bindings.in.rs  sqlite.rs  tests.rs  updater.rs  utils.rs  webview.rs  window.rs  window_ext.rs  zip.rs
crates/memospot/src/polyfills/: pageload.js  reduce_animation.js
crates/migration/: Cargo.toml  README.md
crates/migration/src/: lib.rs  m20220101_000001_migrate_resource_paths.rs  m20220220_000001_migrate_resource_paths.rs  m20240522_000001_migrate_resource_paths.rs  m20240522_000002_migrate_resource_paths.rs  m20240525_000001_storage_settings.rs  m20250221_000001_memospot_v1.rs  path.rs  path_migration.rs  resource_path.rs
crates/portpicker/: Cargo.toml
crates/portpicker/src/: lib.rs
crates/sidecar/: Cargo.toml
crates/sidecar/src/: async_runtime.rs  lib.rs  tests.rs  windows.rs
crates/writable/: Cargo.toml  README.md
crates/writable/src/: lib.rs  tests.rs
docs/: README.md  in.tree  md.tree  writerside.cfg
docs/cfg/: buildprofiles.xml
docs/topics/: ABOUT.md  DEBUGGING.md  DEVELOPMENT.md  MIGRATION.md
installer/: README.md  nsis.nsi  nsis_template.nsi  wix.wxs  wix_template.wxs
installer/flatpak/: io.github.memospot.Memospot.metainfo.xml  io.github.memospot.Memospot.yml
src/: index.html  main.js  styles.css
src-tauri/: .rustfmt.toml  .taurignore  Cargo.toml  Tauri.toml  build.rs  logging_config.sample.yaml
src-tauri/bindings/: Backups.ts  EnvironmentVariables.ts  Log.ts  Migrations.ts
src-tauri/capabilities/: default.toml  desktop.toml  external-links.toml  localhost.toml  migrated.json
src-tauri/i18n/: README.md
src-tauri/i18n/en/: memospot.ftl
src-tauri/i18n/pt-BR/: memospot.ftl
src-tauri/icons/: icon.icns
src-tauri/scripts/: before_build.ts  before_bundle.ts  common.test.ts  common.ts  downloadMemosBuildsHook.test.ts  downloadMemosBuildsHook.ts  types.d.ts  upxPackHook.d.ts  upxPackHook.test.ts  upxPackHook.ts
src-tauri/src/: cmd.rs  i18n.rs  init.rs  js_handler.rs  lib.rs  localize.rs  main.rs  memos.rs  menu.rs  process.rs  runtime_config.rs  sqlite.rs  updater.rs  utils.rs  webview.rs  window.rs  zip.rs
src-tauri/src/home-dir/: .travis.yml  Cargo.toml
src-tauri/src/home-dir/src/: lib.rs  tests.rs
src-ui/: README.md  bun.lockb  components.json  index.html  package.json  postcss.config.js  postcss.config.ts  svelte.config.js  svelte.config.ts  tailwind.config.ts  vite.config.mts  vite.config.ts
src-ui/i18n/: README.md  ar-SA.json  de-DE.json  en.json  es-ES.json  es.json  fr-FR.json  ja-JP.json  project_id  pt-BR.json  pt-PT.json  ru-RU.json  settings.json  uk-UA.json  zh-CN.json  zh-Hans.json  zh-Hant.json
src-ui/project.inlang/: project_id  settings.json
src-ui/src/: app.css  app.html  blinker.ts  hooks.server.ts  (+6 more)
(+40 files in other folders)
