#: schema https://json.schemastore.org/cargo.json
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "memospot"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[lib]
name = "memospot_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { features = ["config-toml"], version = "2.0" }

[target.'cfg(not(local_crates))'.dependencies]
config = { path = "../crates/config" }
dialog = { path = "../crates/dialog" }
homedir = { path = "../crates/homedir" }
migration = { path = "../crates/migration" }
portpicker = { path = "../crates/portpicker" }
writable = { path = "../crates/writable" }

[dependencies]
anyhow = { workspace = true }
async_zip = { version = "0.0.17", features = ["zstd", "tokio-fs"] }
chrono = { version = "0.4", default-features = false }
encoding_rs = "0.8"
home = "0.5"
log = "0.4"
log4rs = { version = "1.3", features = ["background_rotation", "config_parsing", "gzip", "yaml_format"] }
once_cell = "1"
os_pipe = "1"
path-clean = "1.0"
sea-orm = { version = "1.1.0", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_child = "1.0"
strum_macros = "0.26.4"
tempfile = "3.13"
tokio = "1.40"
url = { version = "2", features = ["serde"] }

[target.'cfg(not(tauri_group))'.dependencies]
tauri = { version = ">=2.1", features = ["config-toml"] }
tauri-plugin-fs = ">=2"
tauri-plugin-http = { version = ">=2", features = ["gzip"] }
tauri-plugin-process = ">=2"
tauri-plugin-shell = ">=2"
tauri-utils = ">=2.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[package.metadata.cargo-machete]
ignored = ["tauri-build"]
