#: schema https://json.schemastore.org/cargo.json
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "memospot"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[lib]
name = "memospot_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { features = ["config-toml"], version = "2.0" }

[target.'cfg(not(local_crates))'.dependencies]
config = { path = "../crates/config" }
dialog = { path = "../crates/dialog" }
homedir = { path = "../crates/homedir" }
migration = { path = "../crates/migration" }
portpicker = { path = "../crates/portpicker" }
writable = { path = "../crates/writable" }

[dependencies]
anyhow = { workspace = true }
async_zip = { version = "0.0.17", features = ["zstd", "tokio-fs"] }
chrono = { version = "0.4", default-features = false }
encoding_rs = "0.8"
home = "0.5"
json-patch = "3.0.1"
log = "0.4"
log4rs = { version = "1.3", features = [
    "background_rotation",
    "config_parsing",
    "gzip",
    "yaml_format",
] }
os_pipe = "1"
path-clean = "1.0"
sea-orm = { version = "1.1.3", default-features = false, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_child = "1.0"
strum_macros = "0.26.4"
tempfile = "3.14"
tokio = "1.42"
ts-rs = "10.1"
url = { version = "2", features = ["serde"] }

[target.'cfg(not(i18n_group))'.dependencies]
i18n-embed = { version = "0.14", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.7"
rust-embed = "8"

[target.'cfg(not(tauri_group))'.dependencies]
tauri = { version = "^2.1", features = ["config-toml"] }
tauri-plugin-fs = "^2"
tauri-plugin-http = { version = "^2", features = ["gzip"] }
tauri-plugin-opener = "^2"
tauri-plugin-process = "^2"
tauri-plugin-shell = "^2"
tauri-utils = "^2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "^2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[package.metadata.cargo-machete]
ignored = ["tauri-build"]
