[package]
name = "config"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
description = "Memospot configuration file definitions"

[dependencies]
anyhow = { workspace = true }
figment = { version = "0.10", features = ["env", "json", "yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.42", features = ["fs", "io-std", "io-util", "macros", "rt", "rt-multi-thread", "time"] }
ts-rs = "10.1"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tempfile = "3.14"
