[package]
name = "config"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = "https://github.com/memospot/memospot/crates/config"
description = "Memospot configuration file definitions"

[dependencies]
anyhow = { workspace = true }
figment = { version = "0.10.19", features = ["env", "json", "yaml"] }
serde = { workspace = true }
serde_yaml = "0.9.34"
tokio = { workspace = true, features = ["fs", "io-std", "io-util", "macros", "rt", "rt-multi-thread", "time"] }
ts-rs = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
