[package]
name = "config"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = "https://github.com/memospot/memospot/crates/config"
description = "Memospot configuration file definitions"

[dependencies]
anyhow = { workspace = true }
figment = { workspace = true, features = ["env", "json", "yaml"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-std", "io-util", "macros", "rt", "rt-multi-thread", "time"] }
ts-rs = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
