[package]
name = "dialog"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = "https://github.com/memospot/memospot/crates/dialog"
description = "Memospot platform-agnostic dialog utilities"

[dependencies]
log = { workspace = true }

[target.'cfg(windows)'.dependencies.native-dialog]
version = "0.6.4"
features = ["windows_dpi_awareness", "windows_visual_styles"]

[target.'cfg(not(target_os = "windows"))'.dependencies.native-dialog]
version = "0.6.4"
