[package]
name = "homedir"
version = { workspace = true }
authors = ["eulegang <eulegang@gmail.com>", "Lars Wirzenius", "Lincoln Nogueira"]
edition = { workspace = true }
license = "MIT"
publish = false
repository = "https://github.com/memospot/memospot/crates/homedir"
description = "expands home directories in a path"

[dependencies]
home = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = { workspace = true }
