#: schema https://json.schemastore.org/cargo.json
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "memospot"
version = "1.0.2"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tauri-build"]

[lib]
name = "memospot_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { features = ["config-toml"], version = "2.5" }
build_utils = { path = "../build_utils" }

[dependencies]
# Local crates
config = { path = "../config" }
dialog = { path = "../dialog" }
homedir = { path = "../homedir" }
migration = { path = "../migration" }
portpicker = { path = "../portpicker" }
sidecar = { path = "../sidecar" }
writable = { path = "../writable" }

anyhow = { workspace = true }
async_zip = { workspace = true, features = ["zstd", "tokio-fs"] }
chrono = { workspace = true, default-features = false }
home = { workspace = true }
humantime = { workspace = true }
json-patch = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true, features = ["background_rotation", "config_parsing", "gzip", "yaml_format"] }
path-clean = { workspace = true }
sea-orm = { workspace = true, default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive", "phf"] }
strum_macros = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
ts-rs = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true }

# i18n
i18n-embed = { workspace = true, features = ["rust-embed", "fluent-system", "desktop-requester"] }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }

# tauri
tauri = { workspace = true, features = ["config-toml"] }
tauri-plugin-fs = { workspace = true }
tauri-plugin-http = { workspace = true, features = ["gzip", "rustls-tls"] }
tauri-plugin-opener = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-utils = { workspace = true }

[target.'cfg(windows)'.dependencies]
tempfile = { workspace = true }
winreg = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { workspace = true }

[dev-dependencies]
memospot = { path = ".", features = ["unittest"] } # Allows gating code in `build.rs` to run only in test/lint mode.
tempfile = { workspace = true }

[features]
unittest = [] # Allows gating code in `build.rs` to run only in test/lint mode.

# This feature is used for production builds or when `devPath` points to the filesystem.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[lints]
workspace = true
