[package]
name = "migration"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = "https://github.com/memospot/memospot/crates/migration"
description = "Memospot database migration"

[target.'cfg(not(local_crates))'.dependencies]
homedir = { path = "../homedir" }

[dependencies]
itertools = "0.13"
log = "0.4"
sea-orm = { version = "1.1.3", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "1.1.3", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde_json = "1.0"
