[package]
name = "migration"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = "https://github.com/memospot/memospot/crates/migration"
description = "Memospot database migration"

[target.'cfg(not(local_crates))'.dependencies]
homedir = { path = "../homedir" }

[dependencies]
itertools = { workspace = true }
log = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde_json = { workspace = true }

[lints]
workspace = true
