[package]
name = "portpicker"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = "https://github.com/memospot/memospot/crates/portpicker"
description = "Slim TCP port picker"

[features]
rand = ["dep:rand"]

[dependencies.rand]
version = "0.8"
optional = true
