#: schema https://json.schemastore.org/cargo.json
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "sidecar"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tauri-utils = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread"] }

encoding_rs = "0.8"
os_pipe = "1"
shared_child = "1.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Console"] }

[dev-dependencies]
build_utils = { path = "../build_utils" }
tokio = { workspace = true, features = ["time"] }

[lints]
workspace = true
