# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "writable"
version = "0.0.1"
authors = ["Lincoln Nogueira"]
edition = "2021"
keywords = ["writable", "file", "directory", "check", "permission", "access"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/memospot/memospot/crates/writable"
description = "Extension Trait to Path and PathBuf to check whether a file or directory is writable"

[dev-dependencies]
tempfile = "3.10.1"

[dev-dependencies.uuid]
version = "1.8.0"
features = ["v4"]

[target.'cfg(not(target_os = "windows"))'.dev-dependencies.nix]
version = "0.28"
features = ["user"]
