[package]
name = "writable"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = "https://github.com/memospot/memospot/crates/writable"
description = "Extension Trait to Path and PathBuf to check whether a file or directory is writable"

[dev-dependencies]
tempfile = "3.14"

[dev-dependencies.uuid]
version = "1.11"
features = ["v4"]

[target.'cfg(not(target_os = "windows"))'.dev-dependencies.nix]
version = "0.29"
features = ["user"]
