[package]
name = "writable"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = "https://github.com/memospot/memospot/crates/writable"
description = "Extension Trait to Path and PathBuf to check whether a file or directory is writable"

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = { workspace = true }

[lints]
workspace = true
